--- a/Percentage_Return_Calculator.ipynb
+++ b/Percentage_Return_Calculator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "id": "6c2079d7-3b0e-4a77-9ce5-a8995a4267d8",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Initial Investment: 300\n"
+      "Initial Investment: 100\n"
      ]
     }
    ],
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "281d2903-97a1-42b0-92d8-fc5131b3f005",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ii = Initial_investment\n"
+    "ii = Initial_investment"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "id": "3edda830-ff20-4f8b-a8cc-0ea919f830b0",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Returned_value: 900\n"
+      "Returned_value: 1000\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "0a5c376e-f8cc-4ad3-9452-7fe61cdcbf77",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 30,
    "id": "3ea20b83-c1df-48a7-a21c-59644c082f85",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "id": "ec0a2af2-0049-4cdb-b7bc-6f3a60ee8198",
    "metadata": {},
    "outputs": [],
@@ -80,17 +80,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "id": "0244f1e7-08be-4f7b-ad3f-7aeb79bc1e24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2.166064981949458%'"
+       "'900.0%'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
